Tweak to whitewater shader. Revert if not desired.
	- Note that current was reduced by the +/- texture sample pos, just
	  set it to all +s if this is not desired

--- a/data/shaders.cfg
+++ b/data/shaders.cfg
@@ -247,21 +247,21 @@
 						liquid_tex_color = (
 							  texture2D(u_water_texture, loc + vec2(0.2, u_anura_cycle*u_water_tex_speed[water_type]))
 							+ texture2D(u_water_texture, loc + vec2(0.5, u_anura_cycle*u_water_tex_speed[water_type]))
-						)*0.5;
+						)/2;
 						
 				} else if ( water_type == 1 ) {
 					//Acid texture and movement.
 						liquid_tex_color = (
 							  texture2D(u_acid_texture, loc + vec2(u_anura_cycle*u_water_tex_speed[water_type], 0.0))
 							+ texture2D(u_acid_texture, loc + vec2(u_anura_cycle*u_water_tex_speed[water_type], 0.5))
-						)*0.5;
+						)/2;
 						
 				} else if ( water_type == 2 ) {
 					//Deadly acid texture and movement.
 						liquid_tex_color = (
 							  texture2D(u_deadly_acid_texture, loc + vec2(0.2, u_anura_cycle*u_water_tex_speed[water_type] * +0.2))
 							+ texture2D(u_deadly_acid_texture, loc + vec2(0.5, u_anura_cycle*u_water_tex_speed[water_type] * -1.5))
-						)*0.5;
+						)/2;
 						
 					//[ADDING_WATER] If adding a new water type, specify the new mix above.
 					
@@ -270,14 +270,15 @@
 //						liquid_tex_color = (
 //							  texture2D(u_whitewater_texture, loc + vec2(u_anura_cycle *  2 * u_water_tex_speed[water_type], 0.0))
 //							+ texture2D(u_whitewater_texture, loc + vec2(u_anura_cycle * -2 * u_water_tex_speed[water_type], 0.5 * sin(u_anura_cycle * 200)))
-//						)*0.5;
+//						)/2;
 
 						liquid_tex_color = (
-							+ texture2D(u_whitewater_texture, loc + vec2(u_anura_cycle *  2 * u_water_tex_speed[water_type], 0.0 + 0.006 * sin(u_anura_cycle / 3.0)  ))
-							+ texture2D(u_whitewater_texture, loc + vec2(u_anura_cycle *  1.1 * u_water_tex_speed[water_type], 0.2 + 0.005 * sin(u_anura_cycle / 2.0) + 0.003 * sin(u_anura_cycle / 1.0)  ))
-							+ texture2D(u_whitewater_texture, loc + vec2(u_anura_cycle * -1.1 * u_water_tex_speed[water_type], 0.5 + 0.004 * sin(u_anura_cycle / 2.5) + 0.004 * sin(u_anura_cycle / 1.5)  ))
-							+ texture2D(u_whitewater_texture, loc + vec2(u_anura_cycle * -2 * u_water_tex_speed[water_type], 0.75 + 0.006 * sin(u_anura_cycle / 2.5)  ))
-						)*0.25;
+							/*                            texture sample pos        ???                              ???              ???    ???                 ???                           ???               */
+							+ texture2D(u_whitewater_texture, +loc/0.75 + vec2(u_anura_cycle * +2.0 * u_water_tex_speed[water_type], 0.00 + 0.006 * sin(u_anura_cycle / 3.0)  ))
+							+ texture2D(u_whitewater_texture, -loc/1.00 + vec2(u_anura_cycle * +1.1 * u_water_tex_speed[water_type], 0.20 + 0.005 * sin(u_anura_cycle / 2.0) + 0.003 * sin(u_anura_cycle / 1.0)  ))
+							+ texture2D(u_whitewater_texture, +loc/1.33 + vec2(u_anura_cycle * -1.1 * u_water_tex_speed[water_type], 0.50 + 0.004 * sin(u_anura_cycle / 2.5) + 0.004 * sin(u_anura_cycle / 1.5)  ))
+							+ texture2D(u_whitewater_texture, -loc/1.66 + vec2(u_anura_cycle * -2.0 * u_water_tex_speed[water_type], 0.75 + 0.006 * sin(u_anura_cycle / 2.5)  ))
+						)/4;
 
 						
 				}else {
