Added a top surface to the whitewater effect.

--- a/data/objects/effects/liquids/whitewater_controller.cfg
+++ b/data/objects/effects/liquids/whitewater_controller.cfg
@@ -28,6 +28,13 @@ properties: {
 				time_to_die: 50,
 			})",
 	},
+	top_obj: {
+		type: "obj whitewater_controller.top",
+		init: "object('whitewater_controller.top', mid_x, mid_y, {
+				parent: me,
+				time_to_die: 50,
+			})",
+	},
 
 
 #-------------------------- constructors --------------------------#
@@ -37,7 +44,7 @@ properties: {
 		[
 			setup_shader,
 			add_object(underlay_obj),
-//			add_object(top_obj),
+			add_object(top_obj),
 //			add_object(lights_obj),
 //			add_object(lights_transverse_obj),
 		]
@@ -221,6 +228,45 @@ object_type: [
 			h: 256,
 		},
 	},
+	{
+		id: "top",
+		prototype: ["effects_attache"],
+		zorder: "@include data/zorder.cfg:exterior_near_background",
+		properties: {
+			
+			do_setup: "[
+				set(x, _parent_obj._x_bound),
+				set(y, _parent_obj._y_bound - 20),
+				set(draw_area, [
+					5.0*sin(_offset), 
+					0, 
+					abs(_parent_obj._x2_bound-_parent_obj._x_bound)/2, 
+					img_h/2
+				])
+			] asserting _parent_obj is obj liquid",
+			
+			handle_specialized_processing: "[
+				add(_offset,1.5),
+				do_setup,
+			]",
+
+		#-------------------------- vars --------------------------#
+			_offset: { type: "decimal", default: 0, persistent: false },
+		},
+
+
+		#we don't want to compile the image since we rely on it tiling.
+		no_compile_image: "liquids/toxic-acid-top.png",
+		animation: {
+			image: "liquids/whitewater-top.png",
+			id: "normal",
+			x: 0,
+			w: 128,
+			y: 0,
+			h: 16,
+		},
+	},
+
 ],
 
 }
