Tweak the particle settings for the whitewater controller.

--- a/data/objects/effects/liquids/whitewater_controller.cfg
+++ b/data/objects/effects/liquids/whitewater_controller.cfg
@@ -76,8 +76,13 @@ properties: {
 					time_to_live: bubble_average_lifetime, //Make the bubbles live until the top of the water.
 					box_width: _x2_bound - _x_bound, //Make the bubbles as wide as the water. (To position the bubbles, see `position` above.)
 					emission_rate: (map <- (map <- raw_particle_system_info.emitter).emission_rate) + {
-						max: (_x2_bound - _x_bound) / 20, //Particle density. (Particles per pixel of water surface, divided by 2 on average because random floor is 0.)
-					}
+						max: 15 * (_x2_bound - _x_bound) / 20, //Particle density. (Particles per pixel of water surface, divided by 2 on average because random floor is 0.)
+					},
+					scaling: {
+						max: 10.0,
+						min: 1.0,
+						type: 'random',
+					},
 				},
 			} where
 				raw_particle_system_info = 
