Set up the images for a new particle type to be used with whitewater controllers.

--- a/data/objects/effects/liquids/whitewater_controller.cfg
+++ b/data/objects/effects/liquids/whitewater_controller.cfg
@@ -21,6 +21,20 @@ properties: {
 			zorder: lib.zorder.get('liquid_particle_effects'),
 		})"
 	},
+	water_churn: { 
+		type: "obj particle_attache", 
+		init: "object('particle_attache', x,y, {
+			_particle_type:'whitewater_churn_bubbles', //Silence check for this existing. `particles`, which this sets, is overwritten later.
+			parent: me,
+			time_to_die: 0,
+			x:x, y:y,
+			zorder: lib.zorder.get('liquid_particle_effects'),
+		})",
+		serializable: false,
+	},
+
+
+
 	underlay_obj: {
 		type: "obj water_controller.underlay",
 		init: "object('water_controller.underlay', mid_x, mid_y, { 
@@ -45,8 +59,6 @@ properties: {
 			setup_shader,
 			add_object(underlay_obj),
 			add_object(top_obj),
-//			add_object(lights_obj),
-//			add_object(lights_transverse_obj),
 		]
 
 	]",
@@ -54,6 +66,7 @@ properties: {
 
 	add_particle_effect: "[
 		add_object(volume_bubbles),
+		add_object(water_churn),
 		add_particles('fizz'),
 		add_particles('splash'),
 		add_particles('splash_droplets'),
@@ -91,6 +104,27 @@ properties: {
 					(_y2_bound - _y_bound) / average_vertical_bubble_speed / 60/*fps*/
 					where average_vertical_bubble_speed = 0.7 //as experimentally verified
 		)),
+
+
+		set(water_churn.particles, (
+			raw_particle_system_info + {
+				position: [
+					(_x_bound + _x2_bound)/2 - mid_x, //Horizontal offset of particle system as wide as the water, to handle when the emitter object isn't square within the bounds of the water.
+					-(_y_bound - mid_y + 100), //Position the center point (of the box emitter) at the top of the body of water. Less 4px to float on top of water surface.
+					0
+				],
+				emitter: (map <- raw_particle_system_info.emitter) + {
+					box_width: _x2_bound - _x_bound - 64*2, //Make the bubbles as wide as the water. (To position the bubbles, see `position` above.) Less 64px for fade in/out margins.
+					box_height: 18, //Make the bubbles as tall as the surface strip of water.
+					emission_rate: (map <- (map <- raw_particle_system_info.emitter).emission_rate) + {
+						max: (_x2_bound - _x_bound) / 125, //Particle density. (Particles per pixel of water surface, divided by 2 on average because random floor is 0.)
+					}
+				},
+			} where
+				raw_particle_system_info = 
+					(ParticleSystemInfo <- get_document('data/particles/whitewater_churn_bubbles.cfg')).info
+		)),
+
 
 
 		set(particle_systems['fizz'].min_x, _x_bound - x),
