Made liquids not serialize their .surface objects.  Fixed the particle listings that got serialized with the whitewater objects.

--- a/data/level/Forest/forgotten-falls.cfg
+++ b/data/level/Forest/forgotten-falls.cfg
@@ -10,7 +10,7 @@
 			"current_frame": "normal",
 			"custom": 1,
 			"label": "_5a59",
-			"particles": "bubbles,fizz,splash,splash_droplets",
+			"particles": "fizz,splash,splash_droplets",
 			"property_data": {
 				"_x2_bound": 8128,
 				"_x_bound": 288,
@@ -2336,7 +2336,7 @@
 			"current_frame": "normal",
 			"custom": 1,
 			"label": "_4985",
-			"particles": "bubbles,fizz,splash,splash_droplets",
+			"particles": "fizz,splash,splash_droplets",
 			"property_data": {
 				"_x2_bound": 7296,
 				"_x_bound": 6016,
@@ -3781,7 +3781,7 @@
 				"custom": 1,
 				"cycle": 2,
 				"label": "_5a59",
-				"particles": "bubbles,fizz,splash,splash_droplets",
+				"particles": "fizz,splash,splash_droplets",
 				"property_data": {
 					"_x2_bound": 8128,
 					"_x_bound": 288,
@@ -3817,7 +3817,7 @@
 				"current_frame": "normal",
 				"custom": 1,
 				"label": "_4985",
-				"particles": "bubbles,fizz,splash,splash_droplets",
+				"particles": "fizz,splash,splash_droplets",
 				"property_data": {
 					"_x2_bound": 7296,
 					"_x_bound": 6016,
