--- a/data/level/Forest/tempo-outskirts.cfg
+++ b/data/level/Forest/tempo-outskirts.cfg
@@ -141,7 +141,7 @@
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_4f7e6c66",
-			"particles": "bubbles,fizz,splash,splash_droplets",
+			"particles": "fizz,splash,splash_droplets",
 			"property_data": {
 				"_x2_bound": 4512,
 				"_x_bound": 3168,
@@ -1438,7 +1438,7 @@
 				"current_frame": "normal",
 				"custom": true,
 				"label": "_4f7e6c66",
-				"particles": "bubbles,fizz,splash,splash_droplets",
+				"particles": "fizz,splash,splash_droplets",
 				"property_data": {
 					"_x2_bound": 4512,
 					"_x_bound": 3168,
