--- a/data/object_prototypes/general/liquid.cfg
+++ b/data/object_prototypes/general/liquid.cfg
@@ -107,6 +107,7 @@ on_end_anim: "animation('normal')",
 object_type: [{
 	id: "surface",
 	is_strict: true,
+	serializable: false,
 	zorder: "@include data/zorder.cfg:water",
 	
 	properties: {
