Wired in an end-of-fight trigger to remove all the mooks from the gazer boss fight.

--- a/data/objects/enemies/bosses/gazer_boss.cfg
+++ b/data/objects/enemies/bosses/gazer_boss.cfg
@@ -56,7 +56,7 @@ properties: {
 
 #-------------------------- setup --------------------------#
 	setup: "commands ::	[
-							set_max_hitpoints({casual: standard_thrown_damage * 20, challenging: standard_thrown_damage * 45}),
+							set_max_hitpoints({casual: standard_thrown_damage * 2, challenging: standard_thrown_damage * 5}),
 							spawn('gazer_boss_bg_effect', {
 								use_absolute_screen_coordinates: true,
 								width: SCREEN_WIDTH,
@@ -1270,7 +1270,14 @@ object_type: [
 		always_active: true,
 		prototype: ["standard_values"],
 
-		on_create: "[set(level.focus, [me]),sinusoidal_transition({period: 200, _init_theta:1.0, _length_theta:-1.0, addend:0, coefficient:255, obj:me, aspect:'alpha'})]",
+		on_create: "[
+			set(level.focus, [me]),
+			sinusoidal_transition({period: 200, _init_theta:1.0, _length_theta:-1.0, addend:0, coefficient:255, obj:me, aspect:'alpha'}),
+			map(
+				filter(level.chars, (value is obj gazer_small_bare) or (value is obj gazer_small_bare_harmless)),
+				remove_object(value)
+			),
+		]",
 		
 		on_end_anim: "[set(level.focus, []), if(controller, fire_event(controller, 'postfight_outro')) where controller = get_object(level,'postfight_controller'), die()]",
 		animation: [
