Wrap most of the gazer boss debugging in a conditional so we can turn it on/off without having to delete it, because it's a lot of work to add.

--- a/data/objects/enemies/bosses/gazer_boss.cfg
+++ b/data/objects/enemies/bosses/gazer_boss.cfg
@@ -66,6 +66,9 @@ properties: {
 
 
 #-------------------------- helpers --------------------------#
+	gb_debug_active: "bool :: false",
+	gb_debug: "def(value) -> commands if(gb_debug_active, debug(value))",
+
 	angle_to_look_at: "def(PointLike target) -> decimal
 		//Rotate the target around me, so that the closest angle is the shortest rotation to look at the actual target. (If we just added 90 degrees, the breakpoint for clockwise/counterclockwise would be rotated as well and we'd wind up taking a longer rotation when we didn't need to.)
 		lib.math.closest_angle(me,
@@ -94,12 +97,20 @@ properties: {
 													
 	pick_random_behavior: "commands :: [
 											switch(_behavior_mode_prng.get_next_value,
-//												0, ; [debug('begin_charging_laser'), begin_charging_laser],
-												0, ; if(should_spawn_mooks, [debug('begin_spawn_mooks'), begin_spawn_mooks], [debug('begin_aggro_mooks'), begin_aggro_mooks]),
-												1, ; if(me.hitpoints <= me.max_hitpoints/2, [debug('begin_charging_laser'), begin_charging_laser], [debug('begin_scattershot'), begin_scattershot]),
-												2, ; if(should_spawn_mooks, [debug('begin_spawn_mooks'), begin_spawn_mooks], [debug('begin_spiral_attack'), begin_spiral_attack]),
-												3, ; [debug('begin_scattershot'), begin_scattershot],
-												4, ; [debug('begin_laser_sweep'), begin_laser_sweep],
+												0, ;	if(should_spawn_mooks,
+															begin_spawn_mooks,
+															begin_aggro_mooks
+														),
+												1, ;	if(me.hitpoints <= me.max_hitpoints/2,
+															begin_charging_laser,
+															begin_scattershot
+														),
+												2, ;	if(should_spawn_mooks,
+															begin_spawn_mooks,
+															begin_spiral_attack
+														),
+												3, ;	begin_scattershot,
+												4, ;	begin_laser_sweep,
 											),
 											_behavior_mode_prng.iterate_random_pool,
 											; set(_phase_started_at, cycle)
@@ -135,6 +146,7 @@ properties: {
 	*/
 
 	begin_aggro_mooks: "commands ::	[
+									gb_debug('MODE: begin_aggro_mooks'), 
 									set(_state, enum aggro_mooks),
 									set(_current_phase_random_timer, 170+1d50)
 								]",
@@ -144,7 +156,7 @@ properties: {
 									if(mod(cycle - _phase_started_at, 75) = 0, trigger_single_mook_aggro),
 									if(cycle - _phase_started_at = _current_phase_random_timer,
 										if(size(existing_non_aggroed_mooks) > 0,
-											[debug('force begin_aggro_mooks'), pick_specific_behavior(begin_aggro_mooks)],
+											[gb_debug('forcing begin_aggro_mooks because we've exceeded the time they're supposed to be alive'), pick_specific_behavior(begin_aggro_mooks)],
 											pick_random_behavior
 										)
 									)
@@ -261,6 +273,7 @@ properties: {
 	] where angle_to_target = angle_to_look_at(target)",
 	
 	begin_scattershot: "commands ::	[
+										gb_debug('MODE: begin_scattershot'), 
 										set(_state, enum scattershot_charge),
 										set(_linear_velocity, [0,0]),
 										set(_rotational_velocity, 0),
@@ -390,6 +403,7 @@ properties: {
 	_time_started_laser_chargeup: { type: "int", init: "0", persistent: false },
 		
 	begin_charging_laser: "commands :: [
+									gb_debug('MODE: begin_charging_laser'), 
 									set(_laser_chargeup_duration, 100),
 									set(_state, enum charging_laser),
 									set(_time_started_laser_chargeup,cycle),
@@ -455,7 +469,7 @@ properties: {
 								]",
 	stop_laser: "[
 					remove_object(_laser_beam),
-					[debug('force begin_aggro_mooks'), pick_specific_behavior(begin_aggro_mooks)]
+					[gb_debug('forcing begin_aggro_mooks because we've finished firing the laser'), pick_specific_behavior(begin_aggro_mooks)]
 				]",
 	
 	process_laser: "[
@@ -519,6 +533,7 @@ properties: {
 	
 	
 	begin_laser_sweep: "commands ::	[
+										gb_debug('MODE: begin_laser_sweep'), 
 										set(_state, enum laser_sweep_setup),
 										set(_linear_velocity, [0,0]),
 										set(_rotational_velocity, 0),
@@ -595,6 +610,7 @@ properties: {
 
 
 	begin_spawn_mooks: "commands :: [
+										gb_debug('MODE: begin_spawn_mooks'), 
 										set(_state, enum spawn_mooks),
 										set(_current_phase_random_timer, 150 + (100 * number_of_mooks_to_spawn) + 300 + 1d50),
 									]",
@@ -723,6 +739,7 @@ properties: {
 
 #-------------------------- mook spiral attack --------------------------#
 	begin_spiral_attack: "commands :: [
+									gb_debug('MODE: begin_spiral_attack'), 
 									set(_state, enum spiral_attack),
 									set(_current_phase_random_timer, 50 + (100 + 640) + (50 + 1d75) )
 							]",
