Some work on the gazer boss lore level.

--- a/data/objects/enemies/bosses/gazer_boss.cfg
+++ b/data/objects/enemies/bosses/gazer_boss.cfg
@@ -156,7 +156,7 @@ properties: {
 									if(mod(cycle - _phase_started_at, 75) = 0, trigger_single_mook_aggro),
 									if(cycle - _phase_started_at = _current_phase_random_timer,
 										if(size(existing_non_aggroed_mooks) > 0,
-											[gb_debug('forcing begin_aggro_mooks because we've exceeded the time they're supposed to be alive'), pick_specific_behavior(begin_aggro_mooks)],
+											[gb_debug(~forcing begin_aggro_mooks because we've exceeded the time they're supposed to be alive~), pick_specific_behavior(begin_aggro_mooks)],
 											pick_random_behavior
 										)
 									)
@@ -469,7 +469,7 @@ properties: {
 								]",
 	stop_laser: "[
 					remove_object(_laser_beam),
-					[gb_debug('forcing begin_aggro_mooks because we've finished firing the laser'), pick_specific_behavior(begin_aggro_mooks)]
+					[gb_debug(~forcing begin_aggro_mooks because we've finished firing the laser~), pick_specific_behavior(begin_aggro_mooks)]
 				]",
 	
 	process_laser: "[
