Adjusted the gazer boss level so that we do, in fact, have a cutscene of the player falling in, even if the boss is already beaten.  Furthermore, remove the level elements that were meant to be shattered during the boss fight.

--- a/data/level/Forest/gazer-boss.cfg
+++ b/data/level/Forest/gazer-boss.cfg
@@ -698,8 +698,51 @@
 										def() schedule(100,fire_event(me, 'script1')),
 									] ) 
 								],
-								remove_object(me)
-							) where disappearing_block = get_object_or_die(level, 'disappearing_block')",
+								
+								[
+									begin_skip_dialog_sequence(),
+									set(custom_storage['disappearing_block'], disappearing_block),
+									set(breaking_pillar.animation, 'break'),
+									remove_object(gazer_husk),
+									remove_object(disappearing_block),
+									set(level.player.animation, 'freefall'),
+									set(level.player.control_lock, []),
+									set(level.player.velocity_x, 0),
+									set(level.player.velocity_y, 600),
+									(obj frogatto_playable <- level.player).do_upon_landing( [
+										def() level.player.screen_shake( 90, 140 ,20, 40, 6, 6),
+										def() sound('frogatto-fall-thump.wav'),
+										def() lib.audio.play_music(me,'silence.ogg'),
+										def() animate(me, {level_zoom: 2}, {duration: 95, easing: lib.math.ease_in_out_quint}), 
+										def() schedule(100,fire_event(me, 'script1_alt')),
+									] ) 
+								],
+							)
+								where gazer_husk = get_object(level, 'gazer_husk')
+								where breaking_pillar = get_object_or_die(level, 'breaking_pillar')
+								where disappearing_block = get_object_or_die(level, 'disappearing_block')",
+			"on_script1_alt": "	[
+								if(disappearing_block is custom_obj,
+									add_object(disappearing_block)
+								),
+								speech_dialog(
+									level.player,	[~...~],
+													set(level.player.animation, 'emote_confused'),
+													[~So yeah, uhh…~],
+													set(level.player.animation, 'emote_geez'),
+													[~Why the hell did I come back here again?~],
+													fire_event(me, 'script2_alt'),
+											)
+							] where disappearing_block = custom_storage['disappearing_block']",
+			"on_script2_alt": "	[
+								animate(me, {level_zoom: 1}, {duration: 95, easing: lib.math.ease_in_out_quint}), 
+								set(level.focus, []),
+								end_skip_dialog_sequence(),
+								set(level.player.control_lock, null),
+								set(level.lock_screen, null),
+							]",
+
+
 			"on_script1": "	[
 								if(disappearing_block is custom_obj,
 									add_object(disappearing_block)
