Made the choice of which gazerlet is ammunition random, rather than fixed at 1.

--- a/data/objects/enemies/bosses/gazer_boss.cfg
+++ b/data/objects/enemies/bosses/gazer_boss.cfg
@@ -612,6 +612,7 @@ properties: {
 	begin_spawn_mooks: "commands :: [
 										gb_debug('MODE: begin_spawn_mooks'), 
 										set(_state, enum spawn_mooks),
+										set(_random_mook_choice_designated_as_ammo, 1d(number_of_mooks_to_spawn) - 1),
 										set(_current_phase_random_timer, 150 + (100 * number_of_mooks_to_spawn) + 300 + 1d50),
 									]",
 
@@ -629,12 +630,10 @@ properties: {
 												animate(me, {alpha: 0}, {duration: 50, easing: lib.math.ease_in_out_sine}),
 											]),
 
-											
-											
 											map(range(number_of_mooks_to_spawn), 
 												[
 													if(cycle - _phase_started_at = 300 + value * 100, [
-														spawn_mook_functions(value),
+														spawn_mook_functions(value, _random_mook_choice_designated_as_ammo),
 													]),
 													if(cycle - _phase_started_at = 300 + value * 100 - 90, [
 														animate(manifold_glow_obj, {base_alpha: 180}, {duration: 90, easing: lib.math.ease_in_quint}),
@@ -718,9 +717,9 @@ properties: {
 	number_of_mooks_to_spawn: "max_mook_count",  //we might vary this later, but for now we're just doing the max value
 
 
-	spawn_mook_functions: "def(int mook_num) -> commands 
+	spawn_mook_functions: "def(int mook_num, int index_that_will_be_spawned_as_ammo) -> commands 
 								[
-									if(mook_num = 1,
+									if(mook_num = index_that_will_be_spawned_as_ammo,
 										spawn('gazer_small_bare_harmless', mid_x, mid_y,
 											{facing: if(1d2=2,1,-1)},
 											[schedule(1, [ ; child.fly_to([{x: lib.math.round(pos.x), y: lib.math.round(pos.y)}])])]
@@ -831,6 +830,7 @@ properties: {
 
 	_phase_started_at: { type: "int", init: "0", persistent: false },
 	_current_phase_random_timer: { type: "int", init: "0", persistent: false },
+	_random_mook_choice_designated_as_ammo: { type: "int", init: "0", persistent: false }, 
 	_rotation_direction:  { type: "int", init: "1" },
 	_laser_charge_bloom: { type: "obj gazer_boss.laser_chargeup_bloom", init: "object('gazer_boss.laser_chargeup_bloom', mid_x, mid_y, {facing: facing, parent: me, time_to_die: 0})" },
 	_laser_beam: { type: "obj gazer_boss.beam", init: "object('gazer_boss.beam', mid_x, mid_y, {parent: me, time_to_die: 1})" },
