--- a/data/objects/enemies/bosses/gazer_boss.cfg
+++ b/data/objects/enemies/bosses/gazer_boss.cfg
@@ -55,14 +55,16 @@ properties: {
 
 
 #-------------------------- setup --------------------------#
-	setup: "commands ::	[
-							set_max_hitpoints({casual: standard_thrown_damage * 6, challenging: standard_thrown_damage * 12}),
-							spawn('gazer_boss_bg_effect', {
-								use_absolute_screen_coordinates: true,
-								width: SCREEN_WIDTH,
-								height: SCREEN_HEIGHT,
-							})
-						]",
+	do_setup: "commands ::	[
+								set(_original_boss_position, mid_xy),
+	
+								set_max_hitpoints({casual: standard_thrown_damage * 6, challenging: standard_thrown_damage * 12}),
+								spawn('gazer_boss_bg_effect', {
+									use_absolute_screen_coordinates: true,
+									width: SCREEN_WIDTH,
+									height: SCREEN_HEIGHT,
+								})
+							]",
 
 
 #-------------------------- helpers --------------------------#
@@ -201,7 +203,6 @@ properties: {
 	// TODO DDR 2019-10-05: Move movement logic out of scattershot section, since it's used by the sweep attack as well.
 	
 		#------ Knobs ------#
-	_home_midpoint_xy: "[477, 2109]", #The center of the level, where we start. TODO DDR 2019-10-05: This *really should* be saved at the beginning...
 	_scattershot_target_firing_location: "[
 		(477 + 2d400 - 400 + level.player.midpoint_x) / 2,
 		2029 + 2d100 - 100,
@@ -337,14 +338,14 @@ properties: {
 
 		#------ Stage 3: scattershot_return ------#
 	process_scattershot_return: "commands ::	[
-													process_gazer_movement(_home_midpoint_xy);
+													process_gazer_movement(_original_boss_position);
 													
 													//Lock position if we're close to the home target, so we don't spin around while near because I haven't put in anticipatory breaking.
-													if(lib.math.length(me, _home_midpoint_xy) < 50, [
+													if(lib.math.length(me, _original_boss_position) < 50, [
 														set(_rotational_velocity, _rotational_velocity/2),
 													]);
 													
-													if(lib.math.length(me, _home_midpoint_xy) < 10, [
+													if(lib.math.length(me, _original_boss_position) < 10, [
 														set(_linear_velocity, map(_linear_velocity, value/1.1)), //Hack, just dump momentum when close.
 														set(me.rotate, orginial_rotate), //Don't spin around near home.
 														if(not _reached_home_target, [
@@ -822,22 +823,27 @@ properties: {
 
 	
 
+#-------------------------- attaches --------------------------#
+	_spiral_attack_sound_loop: { type: "obj sound_source_individual_attache", init: "object('sound_source_individual_attache', mid_x, mid_y, {parent: me, sound_file:'gazer-spin-loop.wav', starts_with_sound_on: false})" },
+
+	_laser_charge_bloom: { type: "obj gazer_boss.laser_chargeup_bloom", init: "object('gazer_boss.laser_chargeup_bloom', mid_x, mid_y, {facing: facing, parent: me, time_to_die: 0})" },
+
+	_laser_beam: { type: "obj gazer_boss.beam", init: "object('gazer_boss.beam', mid_x, mid_y, {parent: me, time_to_die: 1})" },
 
 #-------------------------- vars --------------------------#
+	_original_boss_position: { type: "Point2d", init: "[0,0]" },
+
 	_behavior_mode_prng:	{ type: "class pseudo_random_numbers", init: "construct('pseudo_random_numbers',{_size_of_pool:5, _pool_size_multiplier: 1})", persistent: false },
 
-	_spiral_attack_sound_loop: { type: "obj sound_source_individual_attache", init: "object('sound_source_individual_attache', mid_x, mid_y, {parent: me, sound_file:'gazer-spin-loop.wav', starts_with_sound_on: false})" },
 
 	_phase_started_at: { type: "int", init: "0", persistent: false },
 	_current_phase_random_timer: { type: "int", init: "0", persistent: false },
 	_random_mook_choice_designated_as_ammo: { type: "int", init: "0", persistent: false }, 
 	_rotation_direction:  { type: "int", init: "1" },
-	_laser_charge_bloom: { type: "obj gazer_boss.laser_chargeup_bloom", init: "object('gazer_boss.laser_chargeup_bloom', mid_x, mid_y, {facing: facing, parent: me, time_to_die: 0})" },
-	_laser_beam: { type: "obj gazer_boss.beam", init: "object('gazer_boss.beam', mid_x, mid_y, {parent: me, time_to_die: 1})" },
 	_state: { type: "GazerBossBehaviorModeTypes", init: "enum idle", persistent: false },
 },
 		
-on_create:  "[setup, begin_spawn_mooks, add_object(_spiral_attack_sound_loop)]",
+on_create:  "[do_setup, begin_spawn_mooks, add_object(_spiral_attack_sound_loop)]",
 
 on_process: "process_behavior",
 
