Made the gazer boss take a very elevated firing point for the scattershot attacks.

--- a/data/objects/enemies/bosses/gazer_boss.cfg
+++ b/data/objects/enemies/bosses/gazer_boss.cfg
@@ -25,7 +25,7 @@ preload_objects: ["gazer_small_bare", "coin_silver_kinetic", "bouncing_debris_ch
 
 properties: {
 #-------------------------- hittable overrides --------------------------#
-	attack_damage:  "if(true, kill_anything, 0)",
+	attack_damage:  "if(true, 2, 0)",
 	team:  			"if(true, 'evil', 'evil_harmless')",
 	
 	title: "~Gazer Boss~",
@@ -203,10 +203,18 @@ properties: {
 	// TODO DDR 2019-10-05: Move movement logic out of scattershot section, since it's used by the sweep attack as well.
 	
 		#------ Knobs ------#
+# 	_scattershot_target_firing_location: "[
+# 		(477 + 2d400 - 400 + level.player.midpoint_x) / 2,
+# 		2029 + 2d100 - 100,
+# 	]",
+	//473,2104
+
 	_scattershot_target_firing_location: "[
-		(477 + 2d400 - 400 + level.player.midpoint_x) / 2,
-		2029 + 2d100 - 100,
+		_original_boss_position.x + (400 * (-direction_towards_player)),
+		_original_boss_position.y - 300
 	]",
+	
+	
 	
 	_linear_acceleration_rate: 0.1, #px/frame
 	_linear_break_power: 20, #percentage, 0..99, of how strong our breaks are. We break when we're not looking at our target, ie, we've lost it.
