Apparently we droped the ball and made hittable_attaches - which are barely used - not have standard constructor/destructors.  Set those up exactly like effects_attache has, and made sure the gazer-boss's death beam correctly despawns all of its hitboxes after firing.

--- a/data/object_prototypes/base/hittable_attache.cfg
+++ b/data/object_prototypes/base/hittable_attache.cfg
@@ -13,12 +13,18 @@ properties: {
 						asserting not (me.parent = null) | 'An object of type:' + me.type + ' and _addr:' + addr(me) + ' ended up without a parent object.  The design of this prototype demands that these objects always have a parent, period.  They need one upon creation, and if a parent dies, it must immediately remove all child objects of this type.'",
 	
 	attach_to_spawner: "commands :: if(not me in _parent_obj._hittable_attaches, add(_parent_obj._hittable_attaches, [me]))",
+
+
+#-------------------------- constructors/destructors --------------------------#
+	hittable_obj_constructor: "[attach_to_spawner, do_setup]",
+	hittable_obj_destructor: "additional_death_cleanup",
+
+	do_setup: "[]",
+	additional_death_cleanup: "commands :: null",
+
 },
 
 
-
-on_spawned: "attach_to_spawner",
-on_create: "attach_to_spawner",
 
 #-------------------------- collision event handling --------------------------#
 
