--- a/data/objects/effects/attaches/damage_beam_attache.cfg
+++ b/data/objects/effects/attaches/damage_beam_attache.cfg
@@ -66,47 +66,53 @@
 												)
 											)
 										]",
+
+#-------------------------- constructors/destructors --------------------------#
+		//we're not overriding `do_setup` here, because we've got a weird thing going with `process_hitboxes` where it idempotently tries to essentially run the setup every frame.  I believe this is because we may need to alter the number of boxes as the whole thing is processed, rather than just something that was done out of pique.
+
+		additional_death_cleanup: "commands :: map(cached_hitbox_objs, execute(level.player, schedule(1, remove_object(value))))",
+
 	},
 
 	on_process: "[process_hitboxes]",
 	
 	on_create: "[proto_event('hittable_attache','create'),process_hitboxes]",
 
-object_type: [
-	{
-		id: "stub_hittable",
-		/*
-			Although these form a series of hitboxes, these often are not used for graphical 'laser beams' - they're often just used to fake diagonal, single-sprite shot hitboxes.
+	object_type: [
+		{
+			id: "stub_hittable",
+			/*
+				Although these form a series of hitboxes, these often are not used for graphical 'laser beams' - they're often just used to fake diagonal, single-sprite shot hitboxes.
 		
-			Some 90% of the time, we're going to attach these beams to real, hittable objects, providing the 'core' of all their stats (and usually representing their graphic).  If at all possible, we overwhelmingly want to use those instead.  On rare occasions, such as the gazer boss, we're left with situations where no such natural object exists.  That's what this stub is for - it's a basic hittable object with a few configurable parameters we can set up, hopefully alleviating the need for a certain amount of boilerplate.
-		*/
+				Some 90% of the time, we're going to attach these beams to real, hittable objects, providing the 'core' of all their stats (and usually representing their graphic).  If at all possible, we overwhelmingly want to use those instead.  On rare occasions, such as the gazer boss, we're left with situations where no such natural object exists.  That's what this stub is for - it's a basic hittable object with a few configurable parameters we can set up, hopefully alleviating the need for a certain amount of boilerplate.
+			*/
 		
-		prototype: ["hittable"],
-	//	zorder: "@include data/zorder.cfg:in_front_of_everything",
-		always_active: true,
-		solid_dimensions: [],
+			prototype: ["hittable"],
+		//	zorder: "@include data/zorder.cfg:in_front_of_everything",
+			always_active: true,
+			solid_dimensions: [],
 		
-		properties: {
-			taxonomy: "TaxonomyType :: enum neutral",
-			attack_damage_to_player: "int :: if(higher_difficulty, 2, 3)",
-			attack_damage: "int :: 20",
-			team: "string :: _team",
-			has_mini_hp_bar: "bool :: false",
+			properties: {
+				taxonomy: "TaxonomyType :: enum neutral",
+				attack_damage_to_player: "int :: if(higher_difficulty, 2, 3)",
+				attack_damage: "int :: 20",
+				team: "string :: _team",
+				has_mini_hp_bar: "bool :: false",
 
-			_team: { type: "string", default: "evil" },
+				_team: { type: "string", default: "evil" },
+			},
+
 		},
-
-	},
-	{
-		id: "hitbox_object",
-		hidden_in_game: true,
-		always_active: true,
-		serializable: false,
-		prototype: ["hittable_attache"],
+		{
+			id: "hitbox_object",
+			hidden_in_game: true,
+			always_active: true,
+			serializable: false,
+			prototype: ["hittable_attache"],
 		
-		collide_dimensions: ["enemy","~hazard"],
+			collide_dimensions: ["enemy","~hazard"],
 
-	}
-],
+		}
+	],
 
 }
