--- a/data/level/Seaside/crevice-village-central-side-cave.cfg
+++ b/data/level/Seaside/crevice-village-central-side-cave.cfg
@@ -600,7 +600,12 @@
 			"custom": true,
 			"label": "_7bf120c9",
 			"property_data": {
-				"shadow_opacity": 1.0
+				"shadow_opacity": 1.0,
+				"shadow_color": {
+					"r": 0.0,
+					"g": 0.0,
+					"b": 0.0
+				}
 			},
 			"type": "shadow_effect_controller",
 			"x": 437,
