--- a/data/level/Seaside/crevice-village-house-2-basement-backroom.cfg
+++ b/data/level/Seaside/crevice-village-house-2-basement-backroom.cfg
@@ -454,7 +454,12 @@
 			"custom": true,
 			"label": "_7bf120c9",
 			"property_data": {
-				"shadow_opacity": 0.75
+				"shadow_opacity": 0.75,
+				"shadow_color": {
+					"r": 0.011764,
+					"g": 0.074509,
+					"b": 0.109803
+				}
 			},
 			"type": "shadow_effect_controller",
 			"x": 437,
