Added a quick-and-dirty shadow object to the gazer boss level.

--- a/data/level/Forest/gazer-boss.cfg
+++ b/data/level/Forest/gazer-boss.cfg
@@ -872,7 +872,25 @@
 			},
 			"x": 1104,
 			"y": 2246
+		},
+		{
+			"_uuid": "ba3b022b5c404b30bb8b4bc1f5c7c4ee",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_7bf120c9",
+			"property_data": {
+				"shadow_opacity": 0.55,
+				"shadow_color": {
+					"r": 0.254901,
+					"g": 0.023529,
+					"b": 0.125490
+				}
+			},
+			"type": "shadow_effect_controller",
+			"x": 437,
+			"y": 245
 		}
+		
 	],
 	"dimensions": [-896,-896,1695,2847],
 	"id": "gazer-boss.cfg",
