Added a corresponding light source in the middle of the level.

--- a/data/level/Forest/gazer-boss.cfg
+++ b/data/level/Forest/gazer-boss.cfg
@@ -889,6 +889,19 @@
 			"type": "shadow_effect_controller",
 			"x": 437,
 			"y": 245
+		},
+		{
+			"_uuid": "c63d0995d51745a5b4cebeaa17827383",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_49ba88a5",
+			"property_data": {
+				"_x_bound": -48,
+				"_y_bound": 2080
+			},
+			"type": "light_controller",
+			"x": 448,
+			"y": 2336
 		}
 		
 	],
