Better comments for the damage beam attache.  Fixed the zoomer dropping loot, and also throwing a debug message.

--- a/data/objects/effects/attaches/damage_beam_attache.cfg
+++ b/data/objects/effects/attaches/damage_beam_attache.cfg
@@ -68,9 +68,16 @@
 										]",
 
 #-------------------------- constructors/destructors --------------------------#
-		//we're not overriding `do_setup` here, because we've got a weird thing going with `process_hitboxes` where it idempotently tries to essentially run the setup every frame.  I believe this is because we may need to alter the number of boxes as the whole thing is processed, rather than just something that was done out of pique.
+		/*
+			We're not overriding `do_setup` here, because we've got a weird thing going with `process_hitboxes` where it idempotently tries to essentially run the setup every frame.  I believe this is because we may need to alter the number of boxes as the whole thing is processed, rather than just something that was done out of pique.
+		*/
 
-		additional_death_cleanup: "commands :: map(cached_hitbox_objs, execute(level.player, schedule(1, remove_object(value))))",
+		additional_death_cleanup: "commands :: map(cached_hitbox_objs,
+										/*
+											This weirdness is here because of the way this object has to `add_object` all of these things we're about to remove.  It'd be very difficult to, on the final frame of execution, 'disable' execution of our processing code.  Rather than doing that, we instead try to execute this code one frame later (so those don't interfere), and on a different object (because this one won't exist by then).  The `level.player` should reliably exist.
+										*/
+										execute(level.player, schedule(1, remove_object(value)))
+									)",
 
 	},
 
