--- a/data/objects/enemies/bosses/gazer_boss.cfg
+++ b/data/objects/enemies/bosses/gazer_boss.cfg
@@ -1218,10 +1218,11 @@ object_type: [
 		properties: {
 			taxonomy: "TaxonomyType :: enum neutral",
 			attack_damage: "1",
+			acquirable_item_drop_value: "int :: 0",					
 		
 			speed: "10.0",
 			set_initial_position: "execute(me, if(new_pos = null,
-										debug('could not find ground to attach the zoomer to'),
+										force_death(),
 										[set(mid_x, new_pos.x),set(mid_y, new_pos.y-1)]
 									)
 			
@@ -1248,6 +1249,9 @@ object_type: [
 				)", 
 
 			my_particles: { type: "obj legacy_particle_attache", init: "object('legacy_particle_attache', mid_x, mid_y, {_particle_type: 'gazer_boss_zoomer_trail', parent: me, time_to_die: 20, zorder: me.zorder - 1})", },
+
+			
+			
 
 		},
 		on_create: "[
