--- a/data/objects/enemies/bosses/gazer_boss.cfg
+++ b/data/objects/enemies/bosses/gazer_boss.cfg
@@ -1068,6 +1068,7 @@ object_type: [
 		always_active: true,
 		serializable: false,
 		zorder: 20,
+		collide_dimensions: ["~player","~enemy","~hazard","~obstruction"],
 
 		
 		on_process: "add(rotate, 3d2)",
