--- a/data/objects/enemies/bosses/gazer_boss.cfg
+++ b/data/objects/enemies/bosses/gazer_boss.cfg
@@ -58,7 +58,7 @@ properties: {
 	do_setup: "commands ::	[
 								set(_original_boss_position, mid_xy),
 	
-								set_max_hitpoints({casual: standard_thrown_damage * 6, challenging: standard_thrown_damage * 12}),
+								set_max_hitpoints({casual: standard_thrown_damage * 2, challenging: standard_thrown_damage * 12}),
 								spawn('gazer_boss_bg_effect', {
 									use_absolute_screen_coordinates: true,
 									width: SCREEN_WIDTH,
@@ -98,23 +98,24 @@ properties: {
 									]",
 													
 	pick_random_behavior: "commands :: [
-											switch(_behavior_mode_prng.get_next_value,
-												0, ;	if(should_spawn_mooks,
-															begin_spawn_mooks,
-															begin_aggro_mooks
-														),
-												1, ;	if(me.hitpoints <= me.max_hitpoints/2,
-															begin_charging_laser,
-															begin_scattershot
-														),
-												2, ;	if(should_spawn_mooks,
-															begin_spawn_mooks,
-															begin_spiral_attack
-														),
-												3, ;	begin_scattershot,
-												4, ;	begin_laser_sweep,
-											),
-											_behavior_mode_prng.iterate_random_pool,
+											begin_charging_laser,
+# 											switch(_behavior_mode_prng.get_next_value,
+ 												0, ;	if(should_spawn_mooks,
+ 															begin_spawn_mooks,
+ 															begin_aggro_mooks
+ 														),
+ 												1, ;	if(me.hitpoints <= me.max_hitpoints/2,
+ 															begin_charging_laser,
+ 															begin_scattershot
+ 														),
+ 												2, ;	if(should_spawn_mooks,
+ 															begin_spawn_mooks,
+ 															begin_spiral_attack
+ 														),
+ 												3, ;	begin_scattershot,
+ 												4, ;	begin_laser_sweep,
+ 											),
+#											_behavior_mode_prng.iterate_random_pool,
 											; set(_phase_started_at, cycle)
 										]",
 										
@@ -415,12 +416,16 @@ properties: {
 									
 
 	add_charging_laser_effect: "commands ::	[
-												add_object(_laser_charge_bloom),
-												fire_event(_laser_charge_bloom,'create'),
-												set(_laser_charge_bloom.custom_relative_pos_default, {
-													mid_x: mid_x + bloom_offset.x,
-													mid_y: mid_y + bloom_offset.y
-												}),
+												[
+													set(_laser_charge_bloom.custom_relative_pos_default, {
+														mid_x: bloom_offset.x,
+														mid_y: bloom_offset.y
+													})
+													;
+													_laser_charge_bloom.initialize_position
+													;
+													add_object(_laser_charge_bloom)
+												],
 												set(_laser_charge_bloom.rotate, rotate),
 												spawn('effects_attache_glow_source', mid_x, mid_y, {
 													time_to_die: 0,
@@ -429,7 +434,10 @@ properties: {
 													graphics: enum gazer_flare,
 													scale_factor: 0.1,
 													base_alpha: 20,
-													custom_relative_pos_default: {mid_x: bloom_offset.x, mid_y: bloom_offset.y},
+													custom_relative_pos_default: {
+														mid_x: bloom_offset.x,
+														mid_y: bloom_offset.y
+													},
 													zorder: 50,
 												},[
 													animate(child, {base_alpha: 180}, {duration: 40, easing: lib.math.ease_in_quint}),
@@ -1127,6 +1135,12 @@ object_type: [
 		properties: {
 			_anim_counter: { type: "decimal", init: "0" },
 			
+			initialize_position: "commands :: execute(me, [
+								set(relative_x, relative_pos_default.mid_x),
+								set(relative_y, -relative_pos_default.mid_y),
+								debug( '${relative_x} ${relative_y}, ${relative_pos_default.mid_x} ${relative_pos_default.mid_y}' ),
+							])",
+
 
 			do_setup: "commands :: [
 				initialize_position,
