Changed the polarity of the y parameter to initialize_position, so that effects_attache objects are consistent about how they position themselves (currently the glow sources were the opposite polarity).  Changed all instances where this was the wrong value.

--- a/data/object_prototypes/base/effects_attache.cfg
+++ b/data/object_prototypes/base/effects_attache.cfg
@@ -51,7 +51,7 @@ properties: {
 	relative_pos_default: "{mid_x: decimal, mid_y: decimal} :: if(custom_relative_pos_default, custom_relative_pos_default, { mid_x: 0, mid_y: 0 })",
 	initialize_position: "commands :: execute(me, [
 						set(relative_x, relative_pos_default.mid_x),
-						set(relative_y, -relative_pos_default.mid_y),
+						set(relative_y, relative_pos_default.mid_y),
 					])",
 
 #-------------------------- logic --------------------------#
