Removed some debug settings to make balancing the gazer boss easier.

--- a/data/objects/enemies/bosses/gazer_boss.cfg
+++ b/data/objects/enemies/bosses/gazer_boss.cfg
@@ -58,7 +58,7 @@ properties: {
 	do_setup: "commands ::	[
 								set(_original_boss_position, mid_xy),
 	
-								set_max_hitpoints({casual: standard_thrown_damage * 2, challenging: standard_thrown_damage * 12}),
+								set_max_hitpoints({casual: standard_thrown_damage * 6, challenging: standard_thrown_damage * 12}),
 								spawn('gazer_boss_bg_effect', {
 									use_absolute_screen_coordinates: true,
 									width: SCREEN_WIDTH,
@@ -98,8 +98,7 @@ properties: {
 									]",
 													
 	pick_random_behavior: "commands :: [
-											begin_charging_laser,
-# 											switch(_behavior_mode_prng.get_next_value,
+ 											switch(_behavior_mode_prng.get_next_value,
  												0, ;	if(should_spawn_mooks,
  															begin_spawn_mooks,
  															begin_aggro_mooks
@@ -115,7 +114,7 @@ properties: {
  												3, ;	begin_scattershot,
  												4, ;	begin_laser_sweep,
  											),
-#											_behavior_mode_prng.iterate_random_pool,
+											_behavior_mode_prng.iterate_random_pool,
 											; set(_phase_started_at, cycle)
 										]",
 										
