RenRename "frogatto" "frogatto4", so it is installable beside 1.3.

--- a/module.cfg
+++ b/module.cfg
@@ -22,7 +22,7 @@
 	},
 	"dependencies": "gui",
 	"font": "bitmap",
-	"id": "frogatto",
+	"id": "frogtto4",
 	"min_engine_version": 1.4,
 	"name": "Frogatto & Friends",
 	"player_type": "obj player_controlled",
