Beginning the (breaking) changes to the mushroom boss.

--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -9,9 +9,17 @@ always_active: true,
 properties: {
 	#-------------------------- constructor/destructor logic --------------------------#
 		epihittable_obj_constructor: "commands :: [
-			set_draw_size(0.0),
-			set(alpha,0),
-			animation('sprout')
+			if(level.in_editor,
+				[
+					set_draw_size(1.0),
+					set(alpha,255),
+				],
+				[
+					set_draw_size(0.0),
+					set(alpha,0),
+				],
+			),
+			animation('sprout'),
 		]",
 
 
